# sms-level-editor

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  DISCORD_POSTS.md  README.md
.cargo/: config.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
apps/sms-cli/: Cargo.toml
apps/sms-cli/src/: main.rs
apps/sms-editor/: Cargo.toml
apps/sms-editor/src/: active_placement.rs  audio_helpers.rs  audio_preview.rs  browser_settings.rs  camera.rs  content_browser.rs  content_thumbnails.rs  dialogue.rs  direct_boot.rs  document_commands.rs  game_content_index.rs  game_text.rs  goop.rs  gpu_viewport.rs  gpu_viewport_tests.rs  lib.rs  main.rs  managed_build.rs  model_assets.rs  music_library.rs  noki_render_test.rs  npc_accessories.rs  npc_materials.rs  outliner.rs  play_in_editor.rs  preview_assets.rs  preview_flags.rs  preview_grass.rs  preview_particles.rs  preview_types.rs  preview_waves.rs  preview_wires.rs  project.rs  project_ui.rs  routes.rs  scene_labels.rs  skybox_library.rs  software_renderer.rs  stage_creation.rs  startup.rs  (+3 more)
apps/sms-editor/src/shaders/: j3d.wgsl
apps/xtask/: Cargo.toml
apps/xtask/scripts/: validate_gltf_fixtures.js
apps/xtask/src/: gltf_fixtures.rs  main.rs
crates/sms-authoring/: Cargo.toml
crates/sms-authoring/src/: bootstrap.rs  catalog.rs  collision.rs  compile.rs  error.rs  import.rs  lib.rs  math.rs  merge.rs  model.rs  native.rs
crates/sms-authoring/tests/: catalog.rs  compile.rs  fixtures.rs  import.rs  merge.rs
crates/sms-authoring/tests/fixtures/gltf/: README.md
crates/sms-authoring/tests/fixtures/gltf/invalid/accessor-out-of-bounds/: model.gltf
crates/sms-authoring/tests/fixtures/gltf/invalid/malformed-glb/: model.glb
crates/sms-authoring/tests/fixtures/gltf/invalid/missing-external/: model.gltf
crates/sms-authoring/tests/fixtures/gltf/rejected/unencodable-name/: model.gltf
crates/sms-authoring/tests/fixtures/gltf/security/network-uri/: model.gltf
crates/sms-authoring/tests/fixtures/gltf/security/path-traversal/: model.gltf
crates/sms-authoring/tests/fixtures/gltf/unsupported/lines/: model.gltf
crates/sms-authoring/tests/fixtures/gltf/unsupported/morph-target/: model.gltf
crates/sms-authoring/tests/fixtures/gltf/unsupported/points/: model.gltf
crates/sms-authoring/tests/fixtures/gltf/unsupported/skin-animation/: model.gltf
crates/sms-authoring/tests/fixtures/gltf/valid/accessor-layouts/: model.glb
crates/sms-authoring/tests/fixtures/gltf/valid/collision-nodes/: model.glb
crates/sms-authoring/tests/fixtures/gltf/valid/collision-separate/: model.glb
crates/sms-authoring/tests/fixtures/gltf/valid/embedded-texture/: model.glb
crates/sms-authoring/tests/fixtures/gltf/valid/hierarchy-multiprimitive/: model.glb
crates/sms-authoring/tests/fixtures/gltf/valid/material-textures/: model.gltf
crates/sms-authoring/tests/fixtures/gltf/valid/minimal-external/: model.gltf
crates/sms-authoring/tests/fixtures/gltf/valid/names/: model.gltf
crates/sms-authoring/tests/fixtures/gltf/valid/pbr-diagnostics/: model.glb
crates/sms-authoring/tests/fixtures/gltf/valid/primitive-modes/: model.gltf
crates/sms-formats/: Cargo.toml
crates/sms-formats/src/: bas.rs  binary.rs  bmg.rs  bmp.rs  bti.rs  col.rs  game_files.rs  gx_material.rs  gx_texture.rs  j3d.rs  j3d_anim.rs  j3d_anim_rebuild.rs  j3d_rebuild.rs  j3d_static.rs  j3d_tests.rs  jdrama.rs  jpa.rs  jpa_rebuild.rs  lib.rs  mario_record.rs  marker.rs  prm.rs  rarc.rs  stage_assets.rs  stage_misc.rs  yaz0.rs
crates/sms-formats/src/j3d/: texture.rs
crates/sms-render/src/: lib.rs
crates/sms-scene/src/: blank_stage.rs  dialogue_authoring.rs  goop_authoring.rs  lib.rs  object_authoring.rs  object_parameters.rs  project_store.rs  route_authoring.rs  stage_archive.rs  stage_export.rs  validation.rs
crates/sms-scene/tests/: object_parameter_lookup.rs  object_parameters.rs
crates/sms-schema/: Cargo.toml
crates/sms-schema/src/: factory_extractor.rs  lib.rs  map_obj_ball_extractor.rs  map_obj_resource_extractor.rs  map_obj_shared_model_extractor.rs  map_obj_stream_tev_extractor.rs  map_obj_string_tev_extractor.rs  source_inventory.rs  stage_name_extractor.rs
docs/: project-format.md
scripts/: test-retail-previews.ps1
