[workspace]
members = [
    "apps/sms-cli",
    "apps/sms-editor",
    "crates/sms-formats",
    "crates/sms-render",
    "crates/sms-scene",
    "crates/sms-schema",
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.95"
license = "MIT"
repository = "https://github.com/ryanbevins/sms-level-editor"

[workspace.dependencies]
anyhow = "1.0"
bytemuck = { version = "1.25", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
eframe = { version = "0.35.0", default-features = false, features = ["accesskit", "default_fonts", "wayland", "wgpu", "x11"] }
egui = "0.35.0"
encoding_rs = "0.8"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
toml = "1.1"
walkdir = "2.5"
wgpu = "29.0.3"

sms-formats = { path = "crates/sms-formats" }
sms-render = { path = "crates/sms-render" }
sms-scene = { path = "crates/sms-scene" }
sms-schema = { path = "crates/sms-schema" }

[patch.crates-io]
# The published 0.31.10 still pins vulnerable quick-xml 0.39. The upstream
# 0.31.10 manifest has moved to quick-xml 0.41; pin that reviewed revision
# until the next wayland-scanner release reaches crates.io.
wayland-scanner = { git = "https://github.com/Smithay/wayland-rs.git", rev = "249f35c8ce18c8a8000c627ffe04ac235bc0764f" }

[profile.release]
# Optimize the distributable for runtime speed while retaining the baseline
# x86-64 target needed by older PCs.
codegen-units = 1
lto = "fat"
