[package]
name = "sms-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
sms-authoring.workspace = true
sms-formats.workspace = true
sms-scene.workspace = true
sms-schema.workspace = true

[dev-dependencies]
tempfile = "3.23"
