[package]
name = "graffito-editor"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bytemuck.workspace = true
eframe.workspace = true
egui.workspace = true
rfd = "0.17.2"
regex.workspace = true
rodio = "0.22.2"
serde.workspace = true
serde_json.workspace = true
sms-authoring.workspace = true
sms-formats.workspace = true
sms-render.workspace = true
sms-scene.workspace = true
sms-schema.workspace = true
toml.workspace = true
uuid.workspace = true

[target.'cfg(windows)'.dependencies]
raw-window-handle = "0.6.2"
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }

[dev-dependencies]
pollster = "0.4"
tempfile = "3.23"
