[package]
name = "sms-formats"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
encoding_rs.workspace = true
serde.workspace = true
thiserror.workspace = true
walkdir.workspace = true

[dev-dependencies]
serde_json.workspace = true
